--- a/dashboard/starter-example/.env.example
+++ b/dashboard/starter-example/.env.example
@@ -1,12 +1,24 @@
-# Copy from .env.local on the Vercel dashboard
-# https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+// This is your MongoDB database connection string.
+MONGODB_URI=
+
+// How to generate a GitHub client id and secret: 
+// 1. Go to https://github.com/settings/developers and create a new OAuth application
+// 2. Name your application "Vercel-Integration"
+// 3. Set the homepage URL to https://vercel.app for now (we'll change this later)
+// 4. Set the authorization callback URL to https://vercel.app/api/auth/callback/github for now (we'll change this later)
+// 5. Click "Register application". 
+// 6. Once the application is created, copy the "Client ID".
+// 7. Generate a new client secret and copy that too.
+// 8. Once your application is deployed, edit the homepage & callback URLs to match your deployment URL.
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+// Generate one here: https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET=
+
+// You don't need to define this variable in prod (only for localhost)
+NEXTAUTH_URL=
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
